@@ -1,8 +1,6 @@
 // -*- IDL -*-
-
 // $Id$
-
-// Typecode stuff, originall in orb.idl
+// Typecode stuff, originally in orb.idl
 
 #ifndef TAO_TYPECODE_TYPES_IDL
 #define TAO_TYPECODE_TYPES_IDL
